// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataVersionSelect Displays empty when no versions available 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [MockFunction],
      "setWfModuleVersion": [MockFunction],
    }
  }
  isReadOnly={true}
  markDataVersionsRead={[MockFunction]}
  notifications={true}
  revision={202}
  setClickNotification={[Function]}
  setDataVersionAction={[MockFunction]}
  testing={true}
  updateWfModuleAction={[MockFunction]}
  versions={
    Object {
      "selected": null,
      "versions": Array [],
    }
  }
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div
      className="open-modal t-f-blue content-3 ml-2"
    >
      -
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Does not save selection when user hits Cancel 1`] = `
<DataVersionSelect
  api={
    Object {
      "loadWorkflow": [Function],
      "markDataVersionsRead": [MockFunction],
      "setWfModuleVersion": [MockFunction],
      "updateWfModule": [MockFunction],
    }
  }
  isReadOnly={false}
  markDataVersionsRead={[MockFunction]}
  notifications={true}
  revision={202}
  setClickNotification={[Function]}
  setDataVersionAction={[MockFunction]}
  testing={true}
  updateWfModuleAction={
    [MockFunction] {
      "calls": Array [
        Array [
          808,
          Object {
            "notifications": false,
          },
        ],
      ],
    }
  }
  versions={
    Object {
      "selected": "2017-04-10 17:57:58.324Z",
      "versions": Array [
        Array [
          "2017-07-10 17:57:58.324Z",
          false,
        ],
        Array [
          "2017-06-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-05-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-04-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-03-10 17:57:58.324Z",
          true,
        ],
      ],
    }
  }
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-3 ml-2"
        onClick={[Function]}
      >
        2 of 5
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 1`] = `
<DataVersionSelect
  api={
    Object {
      "loadWorkflow": [Function],
      "markDataVersionsRead": [MockFunction],
      "setWfModuleVersion": [MockFunction],
      "updateWfModule": [MockFunction],
    }
  }
  isReadOnly={false}
  markDataVersionsRead={[MockFunction]}
  notifications={true}
  revision={202}
  setClickNotification={[Function]}
  setDataVersionAction={[MockFunction]}
  testing={true}
  updateWfModuleAction={[MockFunction]}
  versions={
    Object {
      "selected": "2017-04-10 17:57:58.324Z",
      "versions": Array [
        Array [
          "2017-07-10 17:57:58.324Z",
          false,
        ],
        Array [
          "2017-06-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-05-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-04-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-03-10 17:57:58.324Z",
          true,
        ],
      ],
    }
  }
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-3 ml-2"
        onClick={[Function]}
      >
        2 of 5
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 2`] = `
<div
  className="modal-dialog modal-dialog"
  role="document"
>
  <div
    className="modal-content"
  >
    <ModalHeader
      className="dialog-header"
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className="dialog-header modal-header"
      >
        <h4
          className="modal-title"
        >
          <div
            className="title-4 t-d-gray"
          >
            DATA VERSIONS
          </div>
        </h4>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </ModalHeader>
    <ModalBody
      className="list-body"
      tag="div"
    >
      <div
        className="list-body modal-body"
      >
        <div
          className=""
        >
          <div
            className="line-item--data-version d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Jul 10 2017 - 05:57PM
            </div>
            <div
              className="icon icon-notification mr-5"
            />
          </div>
          <div
            className="line-item--data-version d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Jun 10 2017 - 05:57PM
            </div>
          </div>
          <div
            className="line-item--data-version d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              May 10 2017 - 05:57PM
            </div>
          </div>
          <div
            className="line-item--data-version--selected d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Apr 10 2017 - 05:57PM
            </div>
          </div>
          <div
            className="line-item--data-version d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Mar 10 2017 - 05:57PM
            </div>
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      className="dialog-footer d-flex justify-content-between"
      tag="div"
    >
      <div
        className="dialog-footer d-flex justify-content-between modal-footer"
      >
        <div
          className="alert-setting-modal"
        >
          <div
            className="alert-setting"
          >
            <div
              className="d-flex align-items-center mb-2"
            >
              <div
                className="icon-notification t-orange module-icon mr-3"
              />
              <div
                className="info-1 t-orange"
              >
                Alerts are ON
              </div>
            </div>
            <div>
               If new data is released, you will be notified via email.
            </div>
          </div>
          <div
            className="button-gray action-button test-cancel-button"
            onClick={[Function]}
          >
            Turn off
          </div>
        </div>
        <div
          className="button-blue action-button test-ok-button"
          onClick={[Function]}
        >
          Load
        </div>
      </div>
    </ModalFooter>
  </div>
</div>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 3`] = `
<DataVersionSelect
  api={
    Object {
      "loadWorkflow": [Function],
      "markDataVersionsRead": [MockFunction],
      "setWfModuleVersion": [MockFunction],
      "updateWfModule": [MockFunction],
    }
  }
  isReadOnly={false}
  markDataVersionsRead={[MockFunction]}
  notifications={true}
  revision={202}
  setClickNotification={[Function]}
  setDataVersionAction={
    [MockFunction] {
      "calls": Array [
        Array [
          808,
          "2017-07-10 17:57:58.324Z",
        ],
      ],
    }
  }
  testing={true}
  updateWfModuleAction={[MockFunction]}
  versions={
    Object {
      "selected": "2017-04-10 17:57:58.324Z",
      "versions": Array [
        Array [
          "2017-07-10 17:57:58.324Z",
          false,
        ],
        Array [
          "2017-06-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-05-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-04-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-03-10 17:57:58.324Z",
          true,
        ],
      ],
    }
  }
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-3 ml-2"
        onClick={[Function]}
      >
        2 of 5
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;
